# cmakeCppExample

./: CMakeLists.txt  README.md
include/math/: mathUtils.h
include/video/: video.h
src/: main.cpp
src/math/: mathUtils.cpp
src/video/: video.cpp
